--- a/css/ColorStyler.css
+++ b/css/ColorStyler.css
@@ -84,7 +84,20 @@ body {
 	height:800px;
 }
 
+.colorThemeTable {
+	height:400px;
+	overflow:auto;
+}
 
+.reverseColorCheckboxClass {
+	padding-top:15px;
+	padding-bottom:20px;
+	padding-left:5px;
+}
+
+.opacitySliderForm {
+	padding-top:15px;	
+}
 
 input[type=range] {
     /*removes default webkit styles*/
