--- a/css/ColorStyler.css
+++ b/css/ColorStyler.css
@@ -99,6 +99,21 @@ body {
 	padding-top:15px;	
 }
 
+.helpFade {
+	opacity: 0.3;
+}
+
+#helpBox {
+	display: inline-block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+	margin-left:-250px;
+}
+
 input[type=range] {
     /*removes default webkit styles*/
     -webkit-appearance: none;
